spynnaker/5.0.0/index.md
---
title: sPyNNaker version 5.1.0
layout: default
---
This page describes an older version. 
Please see [the latest version](/latest/spynnaker.html) or [home page](/)

sPyNNaker version 5.1.0 has been released; we are currently working on the documentation.  If anything here doesn't work, please let the software team know.

* [License Agreement](/common_pages/5.0.0/LicenseAgreement.html)
* [PyNN on SpiNNaker Installation Guide](PyNNOnSpinnakerInstall.html)
* [PyNN on SpiNNaker Models and Limitations](SPyNNakerModelsAndLimitations.html)
* [Using SpiNNaker software without a SpiNNaker Board](/common_pages/5.0.0/VirtualMode.html)
* [Intro Lab: Running simulations on SpiNNaker](IntroLab-PyNN-LabManual.pdf)
* [Tutorial: Using PyNN on SpiNNaker](RunningPyNNSimulationsonSpiNNaker-LabManual.pdf)
* [Extending sPyNNaker with New Neuron and Plasticity Models](PyNNOnSpiNNakerExtensions.html)
* [Tutorial: Simple interaction with Live PyNN Simulation](SimpleIO-LabManual.pdf)
* [Tutorial: Connecting External Devices to PyNN Simulations](ExternalDevices-LabManual.pdf)
<!--  
* [Adding new mapping algorithms with different front ends](/common_pages/5.0.0/MappingAlgorithms.html)
-->

New 5.0.0 pages
---------------

* [Makefile guide](Makefiles.html)

4.0.0 Documentation
-------------------

* [4.0.0 Index](http://spinnakermanchester.github.io/spynnaker/4.0.0/)
