spynnaker/6.0.0/index.md
---
title: sPyNNaker version 6.0.0
layout: default
---
WORK IN PROGRESS
================

sPyNNaker version 6.0.0 has been released; we are currently working on the documentation.  If anything here doesn't work, please let the software team know.

* [License Agreement](/common_pages/6.0.0/LicenseAgreement.html)
* [Release Notes for version 6.0.0](ReleaseNotes.html)
* [PyNN on SpiNNaker Installation Guide](PyNNOnSpinnakerInstall.html)
* [PyNN on SpiNNaker Models and Limitations](SPyNNakerModelsAndLimitations.html)
* [Using SpiNNaker software without a SpiNNaker Board](/common_pages/6.0.0/VirtualMode.html)
* [Intro Lab: Running simulations on SpiNNaker](IntroLab-PyNN-LabManual.pdf)
* [Tutorial: Using PyNN on SpiNNaker](RunningPyNNSimulationsonSpiNNaker-LabManual.pdf)
* [Extending sPyNNaker with New Neuron and Plasticity Models](PyNNOnSpiNNakerExtensions.html)
* [Tutorial: Simple interaction with Live PyNN Simulation](SimpleIO-LabManual.pdf)
* [Tutorial: Connecting External Devices to PyNN Simulations](ExternalDevices-LabManual.pdf)
* [A guide to how we use Makefiles](Makefiles.html)
* [User doc: Using neuromodulated STDP on SpiNNaker](UsingNeuromodulatedSTDPOnSpiNNaker.pdf)

<!--
* [Adding new mapping algorithms with different front ends](/common_pages/6.0.0/MappingAlgorithms.html)
-->

5.0.0 Documentation
-------------------

* [5.0.0 Index](http://spinnakermanchester.github.io/spynnaker/5.0.0/)

4.0.0 Documentation
-------------------

* [4.0.0 Index](http://spinnakermanchester.github.io/spynnaker/4.0.0/)
